# openclaw

./: .gitignore
.github/: labeler.yml
apps/windows/: .gitignore  README.md  build.py  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/windows/scripts/: check-rust.sh
apps/windows/src/: App.tsx  main.tsx  types.ts
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/capabilities/: default.json
apps/windows/src-tauri/src/: gateway.rs  main.rs
apps/windows/src/components/: ErrorBoundary.tsx
apps/windows/src/gateway/: context.tsx  (+1 more)
apps/windows/web/: index.html  main.js  styles.css
docs/: docs.json
docs/cli/: node.md
docs/tools/: exec-approvals.md
git-hooks/: pre-commit
release/: OpenClaw Node Client-0.1.0-1.x86_64.rpm  OpenClaw Node Client_0.1.0_amd64.deb
scripts/: patch-degradation-hook.sh  patch-openclaw-compaction.sh  patch-resolve-model-hook.sh
src/agents/: pi-embedded-subscribe.handlers.messages.ts  pi-embedded-subscribe.types.ts
src/agents/pi-embedded-runner/: extensions.ts  google.ts  run.ts
src/agents/pi-extensions/: compaction-safeguard-runtime.ts
src/auto-reply/reply/: agent-runner.ts
src/cli/node-cli/: register.ts
src/config/: zod-schema.agent-defaults.ts
src/discord/monitor/: gateway-plugin.ts  provider.ts
src/gateway/: auth.test.ts  auth.ts  call.ts  client.ts  method-scopes.ts  net.test.ts  net.ts  server-methods-list.ts  server-methods.ts  server.ios-client-id.test.ts
src/gateway/protocol/: client-info.ts
src/gateway/server-methods/: activity.ts  agent.ts  alerts.ts  diagnostics-extended.ts  metrics.ts  network.ts
src/infra/: activity-ring.ts  alert-manager.ts  exec-approvals.ts
src/node-host/: invoke-win32-exec-host.test.ts  invoke.ts  runner.ts
src/plugins/: hooks.ts  types.ts
(+66 files in other folders)
