[package]
name = "openclaw-windows-node-client"
version = "0.1.0"
description = "OpenClaw Windows Node Client"
authors = ["OpenClaw"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
directories = "6"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "time", "process"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
