[package]
name = "openclaw-node-client"
version = "0.1.0"
description = "OpenClaw Node Client"
authors = ["OpenClaw"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
directories = "6"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json5 = "0.2"
sha2 = "0.10"
futures-util = "0.3"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "time", "process"] }
tokio-tungstenite = { version = "0.21", features = [] }
url = "2"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
